syntax = "proto3";

option go_package = "github.com/litneet64/lab-2-squid-game/protogrpc";

package protogrpc;

service DataRegistryService {
    rpc TransferPlayerMoves (PlayersMoves) returns (Empty);
    rpc RequestPlayerData (DataRequestParams) returns (StageData);
}

message PlayersMoves {
    message Move {
        optional uint32 player_id = 1;
        optional uint32 player_move = 2;
    }
    optional uint32 stage = 1;
    optional uint32 round = 2;
    repeated Move players_moves = 3;
}

message DataRequestParams {
    optional uint32 player_id = 1;
    optional uint32 stage = 2;
}

message StageData {
    repeated uint32 player_moves = 1 [packed = true];
}

message Empty {}